@@ -226,7 +226,7 @@ dli_ihdrs = ['dli/exparse.h', 'dli/iinterp.h', 'dli/interp_core.h', 'dli/ioop.h'
 durotcl_hdrs = ['tcl/duro.h']
 testlib_hdrs = ['tests/point.h']
 
-tcltools = ['tcl/duroadmin.tcl']
+tcltools = ['tcl/duroadmin.tcl', 'tcl/durodump.tcl']
 
 durodocs = ['docs/index.html', 'docs/expressions.html', 'docs/utils.html']
 
