@@ -13,6 +13,7 @@
 
 <ul>
 <li><a href="#duroadmin">Duroadmin</a>
+<li><a href="#durodump">Durodump</a>
 <li><a href="#durodt">Duro D/T</a>
 </ul>
 
@@ -36,6 +37,29 @@ a database environment directory and tries to open that environment.
 a new environment by selecting File-&gt;Create Environment and entering
 a new directory or an empty existing directory. Then create a database
 by selecting Database-&gt;Create-&gt;Database.
+
+<h2 id="durodump">Durodump</h2>
+
+<h3>Synopsis</h3>
+
+<pre>
+durodump.tcl <var>envpath</var> [<var>output_file</var>]
+</pre>
+
+<h3>Description</h3>
+
+<p>Durodump is a Tcl script which dumps the data of all real tables in the
+database environment specified by <var>envpath</var> to a file.
+If the name of the output file is not specified by the <var>output_file</var>
+argument, the output file will be named restore.tcl.
+
+<h4>Restoring the data</h4>
+
+<p>The output file of Durodump is a Tcl script which must be run in order
+to restore the data. The environment directory which is to be restored
+can be passed as an argument. If no argument is given,
+the original environment directory is used.
+The environment directory must exist and is expected to be empty.
 
 <h2 id="durodt">Duro D/T</h2>
 
